feat: add BiologyAAmut

--- a/README.Rmd
+++ b/README.Rmd
@@ -110,6 +110,21 @@ bss <- BiologySeqSet(c("ACC", "ATC", "GTA", "GCA"))
 alnbs <- BiologySeqMSA(bss)
 ```
 
+### BiologyAAmut
+
+- a S4 class to operate AA mutation
+```{r S4-BiologyAAmut}
+mut <- BiologyAAmut(c("D123G", "D6F", "C878C", "D123G", "C878T"))
+
+mut
+
+sort(mut)
+
+unique(sort(mut))
+
+unique(sort(mut), bysite = TRUE)
+```
+
 ## utils
 - correct the gaps location to fit codon frames
 ```{r utils-DNA_gaps_corr}
